[package]
name = "krates"
version = "0.18.0"
description = "Create graphs of crates gathered from cargo metadata"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2024"
repository = "https://github.com/EmbarkStudios/krates"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/krates"
homepage = "https://github.com/EmbarkStudios/krates"
keywords = ["cargo", "metadata", "graph"]
categories = ["visualization"]
exclude = [".github", "tests"]
rust-version = "1.85.0"

[features]
default = []
# Adds support for filtering target specific dependencies
targets = ["cfg-expr/targets"]
# Enables interop with cargo_metadata, if not enabled uses types defined within krates
metadata = ["dep:cargo_metadata", "dep:cargo-platform"]
# Enables serialization of the metadata types within krates
serialize = []

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
# Used for acquiring and/or deserializing `cargo metadata` output
cargo_metadata = { version = "0.19", default-features = false, optional = true }
# We need to use a type from this because it use part of the public API of cargo_metadata
# ...but it's not actually in the public API :p
cargo-platform = { version = "0.1", default-features = false, optional = true }
# Used to parse and evaluate cfg() expressions for dependencies
cfg-expr = "0.18"
# Used to create and traverse graph structures
petgraph = "0.7"
# Used for checking version requirements
semver = { version = "1.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
# Example CLI
clap = { version = "4.5", features = ["derive"] }
insta = { version = "1.40", features = ["json"] }
# Used to print colored diffs in case of test failures
similar-asserts = "1.6"
# Used to deserialize test files into metadata we can load
serde_json = "1.0"
# index metadata retrieval
tame-index = "0.18"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
