[package]
name = "ktest"
version = "0.1.0"
edition = "2024"

[dependencies]
krates = { path = "../" }
insta = { version = "1.47", features = ["json"] }
# Used to print colored diffs in case of test failures
similar-asserts = "1.7"
# Used to deserialize test files into metadata we can load
serde_json = "1.0"
# index metadata retrieval
tame-index = "0.26"