[workspace.dependencies]
ndarray-linalg = "0.16"
lax = "0.16"

workspace.members = ["lax", "ndarray-linalg", "sub-crate"]

[package]
name = "feature-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
sub-crate = { path = "sub-crate", version = "0.1", default-features = false, features = [
    "simple",
] }
toml-span = "0.5.0"
md-5 = "0.7.0"
md5 = "0.7.0"
krates = { version = "0.14.1", default-features = false, features = [
    "prefer-index",
] }

[dependencies.krates-old]
package = "krates"
git = "https://github.com/EmbarkStudios/krates"
tag = "0.12.2"
default-features = false

[dev-dependencies]
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }

[patch.crates-io]
toml-span = { git = "https://github.com/EmbarkStudios/toml-span", rev = "ee49a54" }
krates = { git = "https://github.com/EmbarkStudios/krates", tag = "0.14.1" }
