[package]
name = "features"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }

[features]
blocking = ["reqwest/blocking"]
json = ["reqwest/json"]
multipart = ["reqwest/mime_guess"]
stream = ["reqwest/stream"]
