[package]
name = "features"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, optional = true, features = [
    "rustls-tls",
] }
rgb = { version = "0.8.25", optional = true }
serde = { version = "1.0.133", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
git = { package = "git2", version = "0.14", default-features = false }

[features]
blocking = ["reqwest?/blocking"]
json = ["reqwest?/json"]
multipart = ["reqwest?/multipart"]
serde = ["dep:serde", "rgb?/serde"]
stream = ["reqwest/stream"]
zlib = ["git/zlib-ng-compat", "reqwest?/deflate"]
ssh = ["git/ssh", "git/ssh_key_from_memory"]
