[package]
name = "features-galore"
version = "0.1.0"
edition = "2021"

[dependencies]
reqest = { version = "0.11", package = "reqwest", default-features = false, optional = true, features = [
    "brotli",
    "rustls-tls",
] }
rgb = { version = "0.8.25", optional = true }
serde = { version = "1.0.133", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
git = { package = "git2", version = "0.14", default-features = false }

[target.'cfg(windows)'.dependencies]
audio = { package = "coreaudio-rs", version = "=0.11.1", default-features = false }

[build-dependencies]
reqest = { version = "0.11", package = "reqwest", default-features = false, optional = true, features = [
    "cookies",
] }

[features]
default = ["simple"]
blocking = ["simple", "reqest?/blocking"]
json = ["reqest?/json"]
midi = ["audio/core_midi"]
multipart = ["reqest?/multipart"]
serde = ["dep:serde", "rgb?/serde"]
simple = ["json"]
ssh = ["git/ssh", "git/ssh_key_from_memory"]
stream = ["reqest?/stream"]
zlib = ["git/zlib-ng-compat", "reqest?/deflate"]
