[package]
name = "pid"
version = "0.1.0"
edition = "2021"

[dependencies]
# does not have a feature called wasm-bindgen
getrandom = { version = "0.2.7", features = ["js"] }
# does not have a feature called js
getrandom_old = { package = "getrandom", version = "0.1.16", features = [
    "wasm-bindgen",
] }
tower_http_4 = { package = "tower-http", version = "0.4.4", features = [] }
tower-http = { package = "tower-http", version = "0.5.0", features = [
    "sensitive-headers",
] }
# Repro for https://github.com/EmbarkStudios/krates/issues/76
objc2-latest = { package = "objc2", version = "*" }
objc2-registry = { package = "objc2", version = "0.3.0-beta.3.patch-leaks.3" }
objc2 = { git = "https://github.com/madsmtm/objc2", rev = "65de002" }
# Repro for https://github.com/EmbarkStudios/krates/issues/85
ohno = { git = "https://github.com/EmbarkStudios/krates", branch = "branch/test", package = "krates" }
krates = { git = "https://github.com/EmbarkStudios/krates", tag = "0.16.10" }

# Repro for https://github.com/EmbarkStudios/krates/issues/74, depending on 2
# versions of the same crate, but only one of which is selected due to features
[dependencies.time]
version = "0.2"
features = ["std"]
optional = true
default-features = false

[dependencies.time03]
version = "0.3"
features = ["parsing"]
optional = true
default-features = false
package = "time"

[features]
default = ["time03"]
