[package]
name = "ndarray-linalg"
version = "0.1.0"
edition = "2021"

[features]
default = []

netlib = ["lax/netlib"]
openblas = ["lax/openblas"]
intel-mkl = ["lax/intel-mkl"]

netlib-static = ["lax/netlib-static"]
netlib-system = ["lax/netlib-system"]

openblas-static = ["lax/openblas-static"]
openblas-system = ["lax/openblas-system"]

intel-mkl-static = ["lax/intel-mkl-static"]
intel-mkl-system = ["lax/intel-mkl-system"]

[dependencies]
libc = "0.2"

[dependencies.ndarray]
version = "0.15.2"
features = ["blas", "approx", "std"]
default-features = false

[dependencies.lax]
version = "0.16.0"
workspace = true
default-features = false

[dev-dependencies]
paste = "1.0.5"
