[package]
name = "b"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"

[dependencies]
c = { path = "../c" }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
ring = "0.16.9"

[target.'cfg(all(target_arch = "wasm32", target_feature = "atomics"))'.dependencies]
wasm-bindgen-futures = "0.4.6"

[target.'cfg(all(target_vendor = "xboxone"))'.dependencies]
wasm-bindgen-futures = "0.4.6"

[build-dependencies]
cc = { git = "https://github.com/alexcrichton/cc-rs", rev = "34d4ce4" }
